# AdamSystems.ZVec.NET

./: .gitattributes  .gitignore  .gitmodules  AdamSystems.ZVec.NET-Project-Plan.md  AdamSystems.ZVec.NET.slnx  AdamSystems.ZVec.Net.slnx  CONTRIBUTING.md  CoreReview-AdamSystems.ZVec.NET.md  Directory.Build.props  Directory.Packages.props  LICENSE  README.md  ZVec.NET-Project-Plan.md  ZVec.NET.slnx
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: arm64-windows-testing.yml  ios-device-testing.yml
.github/workflows/: build-managed.yml  build-native-mobile.yml  build-native.yml  pack.yml  publish-nuget.yml  validate-consumer-rerun.yml
BenchmarkDotNet.Artifacts/results/: BenchmarkRun-joined-2026-07-17-21-15-34-report-github.md  BenchmarkRun-joined-2026-07-17-21-15-34-report.csv  BenchmarkRun-joined-2026-07-17-21-15-34-report.html  ZVec.NET.Benchmarks.EngineScaleReferenceBench-report-github.md  ZVec.NET.Benchmarks.EngineScaleReferenceBench-report.csv  ZVec.NET.Benchmarks.EngineScaleReferenceBench-report.html  ZVec.NET.Benchmarks.FilterParsingBench-report-github.md  ZVec.NET.Benchmarks.FilterParsingBench-report.csv  ZVec.NET.Benchmarks.FilterParsingBench-report.html  ZVec.NET.Benchmarks.InsertThroughputBench-report-github.md  ZVec.NET.Benchmarks.InsertThroughputBench-report.csv  ZVec.NET.Benchmarks.InsertThroughputBench-report.html  ZVec.NET.Benchmarks.MemoryDiagnosisBench-report-github.md  ZVec.NET.Benchmarks.MemoryDiagnosisBench-report.csv  (+13 more)
docs/: README.md
samples/: Directory.Build.props  README.md  ZVec.NET.Samples.slnx
src/Mock/ZVec.Native.Mock/: CMakeLists.txt
src/Mock/ZVec.Native.Mock/src/: mock_structs.h  zvec_c_api_mock.cpp
src/Native/ZVec.Native/: CMakeLists.txt  _build.bat  _build_and_deploy.bat  _build_ninja.bat  _configure.bat  _configure_ninja.bat  steps.md
(+385 files in other folders)
